--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,9 +9,13 @@
   },
   "dependencies": {
     "@prisma/client": "^7.4.2",
+    "@tanstack/react-query": "^5.90.21",
+    "@tanstack/react-table": "^8.21.3",
+    "better-auth": "^1.4.20",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
