feat(dependencies): update devDependencies with testing libraries and tools including vitest, jsdom, testing-library, playwright/test, msw, oxfmt, oxlint, and better-auth/cli

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,14 +18,26 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@better-auth/cli": "^1.4.20",
+    "@playwright/test": "^1.58.2",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitest/coverage-v8": "^4.0.18",
     "babel-plugin-react-compiler": "1.0.0",
+    "jsdom": "^28.1.0",
+    "msw": "^2.12.10",
+    "oxfmt": "^0.35.0",
+    "oxlint": "^1.50.0",
     "prisma": "^7.4.2",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.18"
   },
   "ignoreScripts": [
     "sharp",
