--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,55 +1,56 @@
 {
-  "name": "web",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@prisma/adapter-pg": "^7.4.2",
-    "@prisma/client": "^7.4.2",
-    "@tanstack/react-query": "^5.90.21",
-    "@tanstack/react-table": "^8.21.3",
-    "better-auth": "^1.4.20",
-    "dotenv": "^17.3.1",
-    "next": "16.1.6",
-    "pg": "^8.19.0",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
-    "zod": "^4.3.6"
-  },
-  "devDependencies": {
-    "@better-auth/cli": "^1.4.20",
-    "@playwright/test": "^1.58.2",
-    "@tailwindcss/postcss": "^4",
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.2",
-    "@testing-library/user-event": "^14.6.1",
-    "@types/node": "^20",
-    "@types/pg": "^8.18.0",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@vitest/coverage-v8": "^4.0.18",
-    "babel-plugin-react-compiler": "1.0.0",
-    "jsdom": "^28.1.0",
-    "msw": "^2.12.10",
-    "oxfmt": "^0.35.0",
-    "oxlint": "^1.50.0",
-    "prisma": "^7.4.2",
-    "tailwindcss": "^4",
-    "tsx": "^4.21.0",
-    "typescript": "^5",
-    "vitest": "^4.0.18"
-  },
-  "ignoreScripts": [
-    "sharp",
-    "unrs-resolver"
-  ],
-  "trustedDependencies": [
-    "sharp",
-    "unrs-resolver"
-  ]
+	"name": "web",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "biome lint --write",
+		"fmt": "biome format --write"
+	},
+	"dependencies": {
+		"@prisma/adapter-pg": "^7.4.2",
+		"@prisma/client": "^7.4.2",
+		"@tanstack/react-query": "^5.90.21",
+		"@tanstack/react-table": "^8.21.3",
+		"better-auth": "^1.4.20",
+		"dotenv": "^17.3.1",
+		"next": "16.1.6",
+		"pg": "^8.19.0",
+		"react": "19.2.3",
+		"react-dom": "19.2.3",
+		"zod": "^4.3.6"
+	},
+	"devDependencies": {
+		"@better-auth/cli": "^1.4.20",
+		"@biomejs/biome": "2.4.4",
+		"@playwright/test": "^1.58.2",
+		"@tailwindcss/postcss": "^4",
+		"@testing-library/dom": "^10.4.1",
+		"@testing-library/jest-dom": "^6.9.1",
+		"@testing-library/react": "^16.3.2",
+		"@testing-library/user-event": "^14.6.1",
+		"@types/node": "^20",
+		"@types/pg": "^8.18.0",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"@vitest/coverage-v8": "^4.0.18",
+		"babel-plugin-react-compiler": "1.0.0",
+		"jsdom": "^28.1.0",
+		"msw": "^2.12.10",
+		"prisma": "^7.4.2",
+		"tailwindcss": "^4",
+		"tsx": "^4.21.0",
+		"typescript": "^5",
+		"vitest": "^4.0.18"
+	},
+	"ignoreScripts": [
+		"sharp",
+		"unrs-resolver"
+	],
+	"trustedDependencies": [
+		"sharp",
+		"unrs-resolver"
+	]
 }
