--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,16 +10,24 @@
 		"fmt": "biome format --write"
 	},
 	"dependencies": {
+		"@base-ui/react": "^1.2.0",
 		"@prisma/adapter-pg": "^7.4.2",
 		"@prisma/client": "^7.4.2",
 		"@tanstack/react-query": "^5.90.21",
 		"@tanstack/react-table": "^8.21.3",
 		"better-auth": "^1.4.20",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
 		"dotenv": "^17.3.1",
+		"lucide-react": "^0.575.0",
 		"next": "16.1.6",
 		"pg": "^8.19.0",
+		"radix-ui": "^1.4.3",
 		"react": "19.2.3",
 		"react-dom": "19.2.3",
+		"shadcn": "^3.8.5",
+		"tailwind-merge": "^3.5.0",
+		"tw-animate-css": "^1.4.0",
 		"zod": "^4.3.6"
 	},
 	"devDependencies": {
